<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <groupId>com.unir.teamapp</groupId>
    <artifactId>teamapp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>Aplicación para la gestión de equipos deportivos amateur</description>

    <modules>
        <module>teamapp-persist</module>
        <module>teamapp-api</module>
        <module>teamapp-service</module>
        <module>teamapp-server</module>
    </modules>

    <properties>
        <java.version>24</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jwt.version>0.12.6</jwt.version>
		<mapstruct.version>1.6.3</mapstruct.version>
		<springdoc.version>2.8.6</springdoc.version>
		<lombok.version>1.18.38</lombok.version>
		<springfilter.version>2.1.6</springfilter.version>
		<jasypt.version>3.0.5</jasypt.version>
		<commons.collections4.version>4.5.0</commons.collections4.version>
		<commons.io.version>2.19.0</commons.io.version>
		<jakarta.version>3.2.0</jakarta.version>
    </properties>

    <repositories>
    </repositories>

    <distributionManagement>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            
            <!-- Internas -->
			<dependency>
				<groupId>com.unir.teamapp</groupId>
				<artifactId>teamapp-persist</artifactId>
				<version>${project.version}</version>
			</dependency>
            <dependency>
				<groupId>com.unir.teamapp</groupId>
				<artifactId>teamapp-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.unir.teamapp</groupId>
				<artifactId>teamapp-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.unir.teamapp</groupId>
				<artifactId>teamapp-server</artifactId>
				<version>${project.version}</version>
			</dependency>

            <!-- LIBRERIAS EXTERNAS -->

			<!-- Commons-->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons.collections4.version}</version>
        	</dependency>

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>

			<!-- MapStruct Bean Mapping -->
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct-processor</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

            <!-- JWT -->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-api</artifactId>
				<version>${jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-jackson</artifactId>
				<version>${jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-impl</artifactId>
				<version>${jwt.version}</version>
			</dependency>

            <!-- Springdoc Openapi UI -->
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc.version}</version>
			</dependency>

			<!-- Lombok -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- Filtros -->
			<dependency>
				<groupId>com.turkraft</groupId>
				<artifactId>spring-filter</artifactId>
				<version>${springfilter.version}</version>
			</dependency>

			<!-- Cifrado -->
			<dependency>
				<groupId>com.github.ulisesbocchio</groupId>
				<artifactId>jasypt-spring-boot-starter</artifactId>
				<version>${jasypt.version}</version>
			</dependency>

			<!-- Jakarta -->
			<dependency>
				<groupId>jakarta.persistence</groupId>
				<artifactId>jakarta-persistence-api</artifactId>
				<version>${jakarta.version}</version>
			</dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
                    <propertiesEncoding>UTF-8</propertiesEncoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
                    <source>${java.version}</source>
					<target>${java.version}</target>
					<showDeprecation>true</showDeprecation>
					<annotationProcessorPaths>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
        </plugins>
    </build>
</project>